[package]
name = "nasa-iotd-wallpaper"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = "2.0.1"
quick-xml = { version = "0.18.1", features = ["serialize"] }
reqwest = "0.10.7"
tempfile = "3.1.0"
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "0.2.22", features = ["macros"] }
anyhow = "1.0.32"
url = "2.1.1"
